2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-topic-action.c
	
	Handle DnD to topics on the toolbar.

2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/egg/egg-editable-toolbar.h
	
	Checking in forgotten changes to the editable toolbar API.

2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-action.c
	
	Cleaned up ephy-bookmark-action.c to match the new
	gtk-ui-manager based popup menu on the toolbar.

2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/egg/egg-editable-toolbar.c
	
	EggEditableToolbar no longer supports middle-mouse-button drag.
	Fixed a bug in the popup-menu drag.
	Now uses GtkUIManager for the popup-menu.

2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/ephy-stock-icons.c
	* lib/ephy-stock-icons.h
	
	Added stock_bookmark as one of our stock icons.

2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/ephy-node.c
	
	Do not try to store a string parameter if it is null (avoids segfault).

2006-01-16  Crispin Flowerday  <gnome@flowerday.cx>

	* embed/mozilla/EphyBrowser.cpp:

	When looking at modified text areas and forms, don't
	look at disabled or invisible elements. Patch by
	chpe, part of bug #155603
	
2006-01-15  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:
	* src/Makefile.am:

	Add NetworkManager magic for connection status autodetection.
	Defaults to disabled because I'm not very happy with the libnm-glib
	implementation. Oh, and it may crash on startup, too.

2006-01-15  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* lib/ephy-adblock.h:
	* lib/ephy-adblock.c:
	* embed/ephy-adblock-manager.h:
	* embed/ephy-adblock-manager.c:

	Add a method to EphyAdblock interface, ephy_adblock_manager_edit_rule,
	so one can allow/disallow an url.
	Add a method to EphyAdblockManager, ephy_adblock_manager_has_blocker, 
	so one can ask it whether a blocker is running.
