@@ -1,5 +1,13 @@
 2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>
 
+	* src/bookmarks/ephy-topics-palette.c
+	* src/bookmarks/ephy-topics-palette.h
+	
+	Implemented a new widget for topic selection that tries
+	to organise the topics for the user.
+
+2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>
+
 	* src/bookmarks/ephy-topic-action.c
 	
 	Handle DnD to topics on the toolbar.
